--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,15 @@
 *.out
 *.app
 
+*.suo
+# Visual C++ cache files
+ipch/
+*.aps
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
 *.ipch
